# genki_mcp

./: .gitignore  README.md  main.py  pyproject.toml
data/: chapter_metadata.json  lessons.json  pages.json
notebooks/: chapters_to_lessons.ipynb  scanned_pdf_parsing.ipynb
output/: extracted_text.json
